opam-version: "1.2"
maintainer: "Aaron L. Zeng <me@bcc32.com>"
authors: ["Aaron L. Zeng <me@bcc32.com>"]
tags: []
license: "MIT"
homepage: "https://github.com/bcc32/async_main"
dev-repo: "https://github.com/bcc32/async_main"
bug-reports: "https://github.com/bcc32/async_main/issues"
doc: "https://bcc32.github.io/async_main"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "dune"         {build}
  "cmdliner"     {test & >= "1.0.0" & < "2.0.0"}
  "core"         {>= "v0.11.0" & < "v0.12.0"}
  "async"        {>= "v0.11.0" & < "v0.12.0"}
]
